--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: node-app
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       labels:
@@ -18,6 +18,8 @@ spec:
         volumeMounts:
         - mountPath: /logs
           name: my-pvc-volume
+        ports:
+        - containerPort: 8080
       volumes:
       - name: my-pvc-volume
         persistentVolumeClaim:
